# ommi-llm

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  TUI_SUMMARY.md  pyproject.toml
examples/: basic_inference.py  chat_completion.py  shard_model.py  using_skills.py
src/ommi_llm/: __init__.py  cli.py  cli_compression.py
src/ommi_llm/adapters/: __init__.py  base.py  chatglm.py  internlm.py  llama.py  mixtral.py
src/ommi_llm/compression/: __init__.py
src/ommi_llm/core/: auto_model.py  engine.py
src/ommi_llm/server/: mcp_server.py
src/ommi_llm/skills/: __init__.py
src/ommi_llm/utils/: __init__.py  constants.py
src/ommi_llm_zapdev/: cli.py  tui_launcher.py
src/ommi_llm_zapdev/adapters/: __init__.py  baichuan.py  generic.py  mistral.py  qwen.py
src/ommi_llm_zapdev/compression/: compressor.py
src/ommi_llm_zapdev/core/: __init__.py  auto_model.py
src/ommi_llm_zapdev/persistence/: __init__.py  loader.py  sharder.py
src/ommi_llm_zapdev/server/: __init__.py
src/ommi_llm_zapdev/skills/: registry.py
src/ommi_llm_zapdev/tui/: README.md  index.ts  package.json  tsconfig.json
src/ommi_llm_zapdev/utils/: memory.py
tests/: __init__.py  test_adapters.py  test_auto_model.py  test_cli.py  test_engine.py  test_loader.py  test_memory.py
