[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ommi-llm"
version = "0.2.3"
description = "Run 70B+ LLMs on consumer GPUs with layer-wise inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ommi Team"}
]
keywords = ["llm", "inference", "memory-efficient", "layer-wise", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.19.0",
    "numpy>=1.24.0",
    "bitsandbytes>=0.41.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
ommi = "ommi_llm.cli:main"

[project.urls]
Homepage = "https://github.com/ommi-ai/ommi-llm"
Documentation = "https://github.com/ommi-ai/ommi-llm#readme"
Repository = "https://github.com/ommi-ai/ommi-llm"
Issues = "https://github.com/ommi-ai/ommi-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ommi_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
